<resources>
    <string name="app_name">GeekTech</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="test_app">Приложения</string>

    //onBoard
    <string name="test">test</string>
    <string name="next">Далее</string>
    <string name="skip">Пропустить</string>
    <string name="start">Начать</string>

    //Authorization
    <string name="log_print_bishkek">Регистрация по номеру</string>
    <string name="enter">ВОЙТИ</string>
    <string name="sms_phone">Мы отправили СМС код на ваш номер телефона</string>
    <string name="code_phone">Введите полученный код, чтобы подтвердить что это ваш номер</string>
    <string name="edittext_hint"><font size="15">Номер телефона</font></string>
    <string name="edittext_hintf"><font size="15">Код подтверждения</font></string>

    //lesson
    <string name="three_lesson">Для хранения данных в программе предназначены <b>переменные</b>. Переменная представляет именнованную область памяти, которая хранит значение определенного типа.
        Каждая переменная имеет тип,имя и значение. Тип определяет, какую информацию может хранить переменная или диапазон допустимых значений."\n"
        Переменные объявляются следующим образом:"\n"
        <b>тип_данных имя_переменной;</b>"\n"
        Например, определим переменную, которая будет называться x и будет иметь тип int:"\n"
        <b>int x;</b>"\n"В этом выражении мы объявляем переменную x типа int. То есть x будет хранить некоторое число не больше 4 байт."\n" В качестве имени переменной может выступать любое произвольное название, которое удовлетворяет следующим требованиям:
      В качестве имени переменной может выступать любое произвольное название,
            которое удовлетворяет следующим требованиям:"\n"
        &#10004;имя может содержать любые алфавитно-цифровые символы,
        а также знак подчеркивания, при этом первый символ в имени не должен быть цифрой"\n"
        &#10004;в имени не должно быть знаков пунктуации и пробелов"\n"
      		&#10004; имя не может быть ключевым словом языка Java"\n"
        Кроме того, при объявлении и последующем использовании надо учитывать, что Java - регистрозависимый язык,
        поэтому следующие объявления int num; и int NUM; будут представлять две разных переменных."\n"
        Объявив переменную, мы можем присвоить ей значений:"\n"
        	&#8226;<i> int x;//         объявление переменной</i>\n"&#8226;<i> x = 10;         // присвоения значения</i>\n"&#8226;<i> System.out.println(x);           // 10</i>\n"Также можно привоить значение переменной при ее объявлении. Этот процесс называется <b> инициализацией: </b>"\n"
       &#8226;<i> int x = 10;     // объявление и инициализация переменной"</i>\n"&#8226;<i>System.out.println(x);  // 10"</i>\n"Если мы не присвоим переменной значение до ее использования, то мы можем получить ошибку, например, в следующем случае:"\n"&#8226;<i>int x;</i>"\n"&#8226;<i>System.out.println(x);</i>"\n"
        Через запятую можно объявить сразу несколько переменных одного типа:"\n"&#8226;<i>int x, y;</i>"\n"
 &#8226;<i>x = 10;</i>"\n"&#8226;<i>y = 25;</i>"\n"&#8226;<i>System.out.println(x);  // 10</i>"\n"
&#8226;<i>System.out.println(y);  // 25</i>"\n"
        Также можно их сразу инициализировать:"\n"&#8226;<i>int x = 8, y = 15;</i>"\n"&#8226;<i>System.out.println(x);  // 8</i>"\n"
&#8226;<i>System.out.println(y);  // 15</i>"\n"
        Отличительной особенностью переменных является то, что мы можем в процессе работы программы изменять их значение:"\n"
      &#8226;<i>  int x = 10;</i>"\n"&#8226;<i>  System.out.println(x);  // 10</i>"\n"&#8226;<i>  x = 25;</i>"\n"&#8226;<i>  System.out.println(x);  // 25 </i>"\n"
    </string>

    <string name="two_lesson">Одной из основных особенностей Java является то, что данный язык является строго типизированным.
        А это значит, что каждая переменная и константа представляет определенный тип и данный тип строго определен. Тип данных определяет диапазон значений,
        которые может хранить переменная или константа."\n"Итак, рассмотрим систему встроенных базовых типов данных, которая используется для создания переменных в Java. А она представлена следующими типами."\n"
       &#10004; <b>boolean</b>: хранит значение true или false"\n"
        <i>&#8226; boolean isActive = false;"\n"
            &#8226; boolean isAlive = true;</i>"\n"
        &#10004; <b>byte</b>: хранит целое число от -128 до 127 и занимает 1 байт"\n"
        <i>&#8226; byte a = 3;"\n"
            &#8226; byte b = 8;</i>"\n"
         &#10004; <b>short</b>: хранит целое число от -32768 до 32767 и занимает 2 байта"\n"
        <i>&#8226; short a = 3;"\n"
            &#8226; short b = 8;</i>"\n"
        &#10004; <b>int</b>: хранит целое число от -2147483648 до 2147483647 и занимает 4 байта"\n"
        <i>&#8226; int a = 4;"\n"
            &#8226; int b = 9;</i>"\n"
        &#10004; <b>long</b>: хранит целое число от –9 223 372 036 854 775 808 до 9 223 372 036 854 775 807 и занимает 8 байт"\n"
        <i>&#8226; long a = 5;"\n"
            &#8226; long b = 10;</i>"\n"
        &#10004; <b>double</b>: хранит число с плавающей точкой от ±4.9*10-324 до ±1.8*10308 и занимает 8 байт"\n"
        <i>&#8226; double x = 8.5;"\n"
            &#8226; double y = 2.7;</i>"\n"

        <b>Символы и строки</b>"\n"
        В качестве значения переменная символьного типа получает одиночный символ, заключенный в ординарные кавычки: char ch=e;. Кроме того, переменной символьного типа также можно присвоить целочисленное значение от 0 до 65535. В этом случае переменная опять же будет хранить символ,
        а целочисленное значение будет указывать на номер символа в таблице символов Unicode."\n"Например:"\n"
        <i>&#8226; char ch=102; // символ f "\n"
            &#8226; System.out.println(ch);</i>"\n"
    </string>


    <string name="account">Аккаунт</string>
    <string name="a">Aят Алиев</string>
    <string name="click_to_change_name">Редактировать имя</string>
    <string name="group">Группа</string>
    <string name="lack_of_concentration"> Нехватка концентрации</string>




    <string name="student_name_example">Аят Алиев</string>
    <string name="info">info</string>
    <string name="gicCoins">Гикоины:</string>
    <string name="gicCoin">За помощь:</string>
    <string name="coin">4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_fragment_description_example">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s
        standard dummy text ever since the 1500s, when an unknown printer \
        took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic \
        typesetting, remaining essentially unchanged. It was popularised in the \
        1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker \
        including versions of Lorem Ipsum.</string>
    <string name="save">save</string>
    <string name="group_1">Group 1</string>
    <string name="enter_group_name">enter group name&#8230;</string>
    <string name="enter_sensei_name">enter sensei name&#8230;</string>
    <string name="students">Students</string>
    <string name="topics">topics</string>
    <string name="crate_group">crate group</string>
    <string name="title_profile">Профиль</string>
    <string name="title_chat">Группы</string>
    <string name="network">Статьи</string>


    <string-array name="tabs_network">
        <item>Hubr</item>
        <item>Android Docs</item>
    </string-array>

    <string-array name="tabs_network_content">
        <item>https://habr.com/ru/</item>
        <item>https://developer.android.com/guide</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_example">введите название урока</string>
    <string name="lesson_description_example">введте описание урока</string>
    <string name="prof">Профиль</string>
    <string name="aa">

        В этом уроке:/
- рассмотрим взаимодействие между Activity и ее фрагментами/
После размещения фрагмента, хотелось бы начать с ним взаимодействовать. Т.е. размещать View-компоненты и работать с ними,
        обращаться к фрагментам из Activity и наоборот. Попробуем это реализовать.
Для чистоты эксперимента будем работать с двумя фрагментами: статическим и динамическим.
    </string>
</resources>